# ingress-home

./: Cargo.toml  Dockerfile  application.yaml
.github/workflows/: build-deploy.yml  cleanup-old-images.yml  pr-build.yaml
kubernetes/: deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
src/: main.rs
templates/: index.html
